# sekura

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh  readme-shannon.md
.github/workflows/: release.yml
configs/: capital.json  crapi.json  dvwa.json  juiceshop.json
docker/: Dockerfile.kali  docker-compose.yaml
prompts/: exploit-auth.txt  exploit-authz.txt  exploit-injection.txt  exploit-ssrf.txt  exploit-xss.txt  recon-browser.txt  recon-tools.txt  report-executive.txt  tool-output-analyzer.txt  vuln-auth.txt  vuln-authz.txt  vuln-injection.txt  vuln-ssrf.txt  vuln-xss.txt  whitebox-analysis.txt
prompts/shared/: _exploit-scope.txt  _finding-schema.json  _rules.txt  _target.txt  _vuln-scope.txt
scripts/: ghdb_scanner.py  msf_scanner.py  update_ghdb.py
src/: ai_providers.json  lib.rs  main.rs
src/agents/: executor.rs  exploit.rs  mod.rs  recon.rs  registry.rs  report.rs  tool_runner.rs  vuln.rs  whitebox.rs
src/api/: auth.rs  errors.rs  mod.rs  models.rs
src/api/routes/: health.rs  mod.rs  reports.rs  scans.rs  settings.rs  status.rs
src/audit/: agent_logger.rs  metrics_tracker.rs  mod.rs  session.rs  utils.rs  workflow_logger.rs
src/auth/: cookie_injector.rs  mod.rs  totp.rs  web_auth.rs
src/browser/: actions.rs  mod.rs  playwright.rs
src/cli/: commands.rs  logs.rs  mod.rs  query.rs  scan.rs  serve.rs  start.rs  stop.rs
src/config/: credentials.rs  mod.rs  parser.rs  schema.rs  security.rs  types.rs
src/container/: exec.rs  image.rs  manager.rs  mod.rs
src/db/: connection.rs  findings.rs  mod.rs  scans.rs  schema.rs  settings.rs
src/errors/: classification.rs  mod.rs  retry.rs  types.rs
src/git/: checkpoint.rs  mod.rs  semaphore.rs
src/llm/: anthropic.rs  catalog.rs  gemini.rs  local.rs  mod.rs  openai.rs  openrouter.rs  provider.rs  router.rs  types.rs
src/models/: deliverable.rs  finding.rs  mod.rs  report.rs  scan_result.rs  verdict.rs
src/pipeline/: metrics.rs  mod.rs  orchestrator.rs  phase.rs  state.rs
src/prompts/: loader.rs  mod.rs
src/queue/: decision.rs  mod.rs  validator.rs
src/repl/: banner.rs  commands.rs  completer.rs  events.rs  mod.rs  progress.rs  renderer.rs  session.rs
src/reporting/: assembler.rs  formatter.rs  metadata.rs  mod.rs
src/session/: manager.rs  mod.rs  state.rs
src/techniques/: dedup.rs  loader.rs  mod.rs  resolver.rs  runner.rs  sorter.rs  wstg.rs
src/utils/: formatting.rs  mod.rs  similarity.rs  truncation.rs
src/whitebox/: analyzer.rs  flow_tracer.rs  mod.rs  scanner.rs  sink_finder.rs
techniques/: application.yaml  exploitation.yaml
tests/: api.rs  report_commands.rs
