[package]
name = "sekura"
version = "1.0.0"
edition = "2021"
description = "Autonomous AI Penetration Testing Agent"
license = "MIT"

[[bin]]
name = "sekura"
path = "src/main.rs"

[features]
default = ["cli", "api"]
cli = []
api = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# CLI framework
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Docker SDK
bollard = "0.17"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Git operations
git2 = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# TUI output
indicatif = "0.17"
console = "0.15"

# Schema validation
jsonschema = "0.18"

# TOTP
totp-rs = { version = "5", features = ["gen_secret"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Base32
data-encoding = "2"

# Glob
glob = "0.3"

# Regex
regex = "1"

# Diff/similarity
similar = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait
async-trait = "0.1"

# Concurrent map
dashmap = "6"

# Cancellation
tokio-util = { version = "0.7", features = ["rt"] }

# Random (for jitter)
rand = "0.8"

# Tar (for docker copy)
tar = "0.4"

[build-dependencies]
chrono = "0.4"

[profile.release]
lto = true
strip = true
opt-level = 3
